tools/playbooks/prometheus/prometheus-ingress.yaml
# TODO: Edit this ingress to make prometheus available on prometheus.code-triarii.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-azure
    kubernetes.io/ingress.class: nginx
  labels:
    app: prometheus-server
  name: prometheus-ingress
  namespace: prometheus
spec:
  rules:
  - host: prometheus-iluvatar.code-triarii.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-server
            port:
              number: 80 
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus-iluvatar.code-triarii.com
    secretName: prometheus-ingress-secret
